# localhost

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-macos.yml  update-homebrew.yml
docs/plans/: 2026-03-20-cicd-distribution-plan.md  2026-03-20-localhost-design.md  2026-03-20-project-scaffold-plan.md  2026-03-20-react-frontend-plan.md  2026-03-20-rust-backend-plan.md  2026-03-20-ui-design-plan.md
scripts/: bump-version.sh  generate-icons.py  release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/macos/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  proc_cwd.rs  project_resolver.rs  types.rs
src-tauri/src/scanner/: dev_tools.rs  docker.rs  mod.rs  port_scanner.rs
src/components/: ActionButtons.tsx  DetailPanel.tsx  EmptyState.tsx  Footer.tsx  Header.tsx  MenuDropdown.tsx  PortBadge.tsx  ProcessItem.tsx  ProjectGroup.tsx  ProjectList.tsx  Settings.tsx  icons.tsx
src/hooks/: useProcessPoller.ts
src/lib/: format.ts  tauri.ts
src/stores/: processStore.ts
src/styles/: index.css
src/types/: index.ts
