[package]
name = "localhost"
version = "0.1.0"
description = "macOS menu bar app for monitoring local dev processes"
authors = ["Efe Celik"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "localhost_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core — tray-icon feature required for menu bar app
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }

# Tauri plugins
tauri-plugin-shell  = "2"
tauri-plugin-store  = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — bollard and tokio-based code requires this
tokio = { version = "1", features = ["full"] }

# Process + system info scanning
sysinfo = "0.33"

# Docker container scanning via Unix socket
bollard = "0.18"

# Port-to-PID mapping
netstat2 = "0.9"

# Error handling
thiserror  = "2"

# Home directory resolution
dirs = "6"

# Open URLs in default browser
open = "5"

# Logging
log         = "0.4"
env_logger  = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
# Raw Objective-C access for tray icon positioning and window behaviour
cocoa = "0.26"
objc  = "0.2"

[profile.dev]
# Faster incremental dev builds — don't strip debug info
opt-level = 0

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
